Create ManyToMany between articles anc categories + generate CRUD.

--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -17,7 +17,7 @@
             <div class="col offset-s1 s10 offset-m2 m4 offset-l2 l2 home_bloc_tile hoverable">
                 <img src="{{ asset('/img/profile-black.png')}}" alt="profil">
                 <h2>Profil</h2>
-                <p>Présentation.<br>Mon parcours, mes attentes, mes envies.</p>
+                <p>Présentation générale.<br>Parcours, mes attentes, mes envies.</p>
             </div>
         </a>
 
@@ -25,7 +25,7 @@
             <div class="col offset-s1 s10 offset-m1 m4 offset-l1 l2 home_bloc_tile hoverable">
                 <img src="{{ asset('/img/logbook-black.png')}}" alt="logbook">
                 <h2>Logbook</h2>
-                <p>Journal de bord de développement du site.<br> Section principale du site.<br>A terme, incluera github et tweeter !</p>
+                <p>Journal de développement du site.<br> A terme, incluera flux github et tweeter.</p>
             </div>
         </a>
 
@@ -33,7 +33,7 @@
             <div class="col offset-s1 s10 offset-m2 m4 offset-l1 l2 home_bloc_tile hoverable">
                 <img src="{{ asset('/img/settings-black.png')}}" alt="projets">
                 <h2>Projets</h2>
-                <p>Stack technique perso.<br>Mes réalisations.</p>
+                <p>Mes réalisations.<br>Stack technique perso.</p>
             </div>
         </a>
 
@@ -50,7 +50,7 @@
         <div class="col offset-s1 s10 offset-m1 m4 offset-l1 l2 home_bloc_tile hoverable">
             <img src="{{ asset('/img/blog-black.png')}}" alt="blog">
             <h2>Blog</h2>
-            <p>De la tech et des idées.</p>
+            <p>De la tech et des idées.<br>En construction.</p>
             <div class="bl_sp_xs"></div>
             <img src="{{ asset('/img/construction.png')}}" alt="section en construction" class="construction">
         </div>
