--- a/app/Resources/views/Main/project.html.twig
+++ b/app/Resources/views/Main/project.html.twig
@@ -17,7 +17,7 @@
         <div class="row project-tile">
             <div class="col offset-s1 s10 offset-m1 m5">
                 <div class="card light-green z-depth-4">
-                    <div class="card-content white-text">
+                    <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>PHP</strong></span>
                         <ul>
                             <li>Site réalisé avec <strong>Symfony 2</strong>.</li>
@@ -25,13 +25,13 @@
                         </ul>
                     </div>
                     <div class="card-action">
-                        <a href="http://www.wildcodeschool.fr/" class="green-text text-darken-4">Wild Code School</a>
-                        <a href="https://symfony.com" target="_blank" class="green-text text-darken-4">Symfony</a>
+                        <a href="http://www.wildcodeschool.fr/" class="white-text">Wild Code School</a>
+                        <a href="https://symfony.com" target="_blank" class="white-text">Symfony</a>
                     </div>
                 </div>
 
                 <div class="card green lighten-2 z-depth-4">
-                    <div class="card-content white-text ">
+                    <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>CSS</strong></span>
                         <ul>
                             <li>Site réalisé en <strong>Materializecss</strong>.</li>
@@ -40,16 +40,16 @@
                         </ul>
                     </div>
                     <div class="card-action">
-                        <a href="http://materializecss.com/" class="green-text text-darken-4">Materialize</a>
-                        <a href="http://getbootstrap.com/" class="green-text text-darken-4">Bootstrap</a>
-                        <a href="http://foundation.zurb.com/" class="green-text text-darken-4">Foundation</a>
+                        <a href="http://materializecss.com/" class="white-text">Materialize</a>
+                        <a href="http://getbootstrap.com/" class="white-text">Bootstrap</a>
+                        <a href="http://foundation.zurb.com/" class="white-text">Foundation</a>
 
                     </div>
                 </div>
             </div>
             <div class="col offset-s1 s10 m5">
                 <div class="card lime darken-1 z-depth-4">
-                    <div class="card-content white-text">
+                    <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>JavaScript</strong></span>
                         <ul>
                             <li>Site réalisé avec <strong>jQuery</strong>, librairie avec laquelle je travaille.</li>
@@ -59,28 +59,25 @@
                         </ul>
                     </div>
                     <div class="card-action">
-                        <a href="https://jquery.com/" class="green-text text-darken-4">jQuery</a>
-                        <a href="https://angularjs.org/" class="green-text text-darken-4">AngularJS</a>
+                        <a href="https://jquery.com/" class="white-text">jQuery</a>
+                        <a href="https://angularjs.org/" class="white-text">AngularJS</a>
                     </div>
                 </div>
                 <div class="card green accent-4 z-depth-4">
-                    <div class="card-content white-text">
+                    <div class="card-content green-text text-darken-4">
                             <span class="card-title">
                                     Site hebergé sur un <strong>VPS</strong> 1&1
                             </span>
                     </div>
                     <div class="card-action">
-                        <a href="https://www.1and1.fr" class="green-text text-darken-4">1&1</a>
+                        <a href="https://www.1and1.fr" class="white-text">1&1</a>
                     </div>
                 </div>
                 <div class="card green accent-2 z-depth-4">
-                    <div class="card-content white-text">
-                        <p>
-                            <strong>
-                            Je travaille principalement avec PHP Storm et un peu de SublimeText.
-                            </strong>
-                        </p>
-
+                    <div class="card-content green-text text-darken-4">
+                            <span class="card-title"><small>
+                            Je travaille principalement avec <strong>PHP Storm</strong> et un peu de <strong>SublimeText</strong>.
+                            </small></span>
                     </div>
                 </div>
             </div>
