--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -21,6 +21,9 @@
                         <li>
                             <a href="{{ path('category_show', { 'id': category.id }) }}">show</a>
                         </li>
+                        <li>
+                            <a href="{{ path('category_edit', { 'id': category.id }) }}">edit</a>
+                        </li>
                     </ul>
                 </td>
             </tr>
@@ -28,5 +31,9 @@
         </tbody>
     </table>
 
-    
+    <ul>
+        <li>
+            <a href="{{ path('category_new') }}">Create a new category</a>
+        </li>
+    </ul>
 {% endblock %}
