--- a/web/css/main.css
+++ b/web/css/main.css
@@ -109,7 +109,7 @@ img {
     width: 300px;
     background-color: #FFFFFF;
     position: relative;
-    box-shadow: 0px 20px 75px -20px #5CE522;
+    box-shadow: -0.5em 0.5em 0.75em #007f00;
 }
 
 .home_bloc_tile p {
@@ -194,6 +194,6 @@ footer .row {
     margin-bottom: 0px;
 }
 
-.userview {
-    background-image: url('../img/background-japanese.png');
+.project-tile li {
+    font-size: 1.25rem;
 }
