Create both comments entities

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -197,3 +197,15 @@ footer .row {
 .project-tile li {
     font-size: 1.25rem;
 }
+
+/**
+#action-button-2 {
+    top: 15px;
+
+}
+
+#action-button-2 ul {
+    top: 45px;
+}
+
+**/
