Install FOSRest Bundle to test and see how it can help to setup API on website. Change config to enable serializer.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,13 +58,13 @@
     <ul id="slide-out" class="side-nav">
         <li>
             <div class="userView">
-                <a href="#!user"><img class="circle" src="{{ asset('/img/portrait_alexandrefradet.jpg') }}"></a>
-                <a href="#!name"><span class="black-text name">Alexandre FRADET</span></a>
-                <a href="#!email"><span class="black-text email">alex.fradet.1@gmail.com</span></a>
+                <a href=""><img class="circle" src="{{ asset('/img/portrait_alexandrefradet.jpg') }}"></a>
+                <a href=""><span class="black-text name">Alexandre FRADET</span></a>
+                <a href=""><span class="black-text email">alex.fradet.1@gmail.com</span></a>
             </div>
         </li>
-        <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-        <li><a href="#!">Second Link</a></li>
+        <li><a href=""><i class="material-icons">cloud</i>First Link With Icon</a></li>
+        <li><a href="">Second Link</a></li>
         <li><div class="divider"></div></li>
         <li><a class="subheader">Subheader</a></li>
         <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
