--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -54,6 +54,9 @@
         </nav>
     </header>
 {%  endblock %}
+<main>
+
+{# Profile side-nav #}
 
     <ul id="slide-out" class="side-nav">
         <li>
@@ -75,11 +78,13 @@
         <li>Ancien téléconseiller</li>
     </ul>
 
+{# Bottom fixed button #}
 
-<main>
     <div class="fixed-action-btn">
-        <a href="#head" class="btn-floating btn-large green darken-3">
-            <img src="{{ asset('/img/arrow_up-black.png') }}" alt="retour haut">
+        <a href="#" data-activates="slide-out" class="button-collapse2 btn-floating btn-large green darken-3">
+
+ {#       <a href="#head" class="btn-floating btn-large green darken-3"> #}
+            <img src="{{ asset('/img/profile-black.png') }}" alt="profile">
         </a>
         <ul>
             <li><a href="https://twitter.com/{{ twitter }}" target="_blank" class="btn-floating yellow darken-1"><img src="{{ asset('/img/twitter-black.png')}}" alt="twitter"/></a></li>
@@ -91,6 +96,7 @@
 
 {% block body %}{% endblock %}
 </main>
+
 
 {% block footer %}
     <footer class="page-footer green darken-3 z-depth-5">
