Tried adding a js effect on homescreen, doesn't work yet. Enabled 6th tile on homescreen, gonna display news.

--- a/app/Resources/views/Main/project.html.twig
+++ b/app/Resources/views/Main/project.html.twig
@@ -4,24 +4,22 @@
 
 {% block body %}
 
-    <div id="project_main" class="row">
         <div class="col s12 offset-m2 m8 offset-l3 l6">
-            <h1>Projet - Stack technique</h1>
-            <h2>Projets</h2>
-            <h3><small>Réalisations - Contributions - Essais</small></h3>
-            <h2>Technique</h2>
-            <h3><small>Ce que j'utilise</small></h3>
+            <h1>Projets - Stack technique</h1>
+
         </div>
-    </div>
     <div class=container">
+        <h2>Compètences technique</h2>
+        <h3><small>Ce que j'utilise</small></h3>
         <div class="row project-tile">
             <div class="col offset-s1 s10 offset-m1 m5">
                 <div class="card light-green z-depth-4">
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>PHP</strong></span>
                         <ul>
-                            <li>Site réalisé avec <strong>Symfony 2</strong>.</li>
-                            <li>En formation sur ce framework <strong>@WildCodeSchool</strong>.</li>
+                            <li>En formation <strong>Développeur PHP</strong> à la <strong>@WildCodeSchool</strong>.</li>
+                            <li>Spécialisé <strong>Symfony 2</strong>. Site réalisé avec ce framework.</li>
+                            <li>Développement en <strong>POO</strong> et structure <strong>MVC</strong>.</li>
                         </ul>
                     </div>
                     <div class="card-action">
@@ -30,58 +28,70 @@
                     </div>
                 </div>
 
-                <div class="card green lighten-2 z-depth-4">
-                    <div class="card-content green-text text-darken-4">
-                        <span class="card-title"><strong>CSS</strong></span>
-                        <ul>
-                            <li>Site réalisé en <strong>Materializecss</strong>.</li>
-                            <li>Je travaille sur <strong>Bootstrap</strong>.</li>
-                            <li>J'hésite entre <strong>Foundation</strong> et du CSS sans framework pour mon prochain projet.</li>
-                        </ul>
-                    </div>
-                    <div class="card-action">
-                        <a href="http://materializecss.com/" class="white-text">Materialize</a>
-                        <a href="http://getbootstrap.com/" class="white-text">Bootstrap</a>
-                        <a href="http://foundation.zurb.com/" class="white-text">Foundation</a>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col offset-s1 s10 m5">
                 <div class="card lime darken-1 z-depth-4">
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>JavaScript</strong></span>
                         <ul>
                             <li>Site réalisé avec <strong>jQuery</strong>, librairie avec laquelle je travaille.</li>
-                            <li>J'ai testé rapidement <strong>AngularJS</strong>.</li>
-                            <li>Si je dois partir sur une nouvelle techno JS front, ce serait <strong>ReactJS</strong>.</li>
-                            <li>Ma prochaine techno back sera probablement <strong>NodeJS</strong>.</li>
+                            <li>J'envisage <strong>NodeJS</strong> comme prochaine techno.</li>
                         </ul>
                     </div>
                     <div class="card-action">
                         <a href="https://jquery.com/" class="white-text">jQuery</a>
-                        <a href="https://angularjs.org/" class="white-text">AngularJS</a>
                     </div>
                 </div>
-                <div class="card green accent-4 z-depth-4">
-                    <div class="card-content green-text text-darken-4">
-                            <span class="card-title">
-                                    Site hebergé sur un <strong>VPS</strong> 1&1
-                            </span>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://www.1and1.fr" class="white-text">1&1</a>
-                    </div>
-                </div>
+
                 <div class="card green accent-2 z-depth-4">
                     <div class="card-content green-text text-darken-4">
                             <span class="card-title"><small>
-                            Je travaille principalement avec <strong>PHP Storm</strong> et un peu de <strong>SublimeText</strong>.
+                            Je travaille principalement avec <strong>PHP Storm</strong>.
                             </small></span>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col offset-s1 s10 m5">
+
+                <div class="card green lighten-2 z-depth-4">
+                    <div class="card-content green-text text-darken-4">
+                        <span class="card-title"><strong>CSS</strong></span>
+                        <ul>
+                            <li>Je travaille sur <strong>Bootstrap</strong>.</li>
+                            <li>Site réalisé en <strong>Materializecss</strong>.</li>
+                            <li>J'hésite entre <strong>Foundation</strong> et <strong>Sass</strong> pour mon prochain projet.</li>
+                        </ul>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://getbootstrap.com/" class="white-text">Bootstrap</a>
+                        <a href="http://materializecss.com/" class="white-text">Materialize</a>
+                    </div>
+                </div>
+
+                <div class="card green accent-4 z-depth-4">
+                    <div class="card-content green-text text-darken-4">
+                            <span class="card-title">
+                                    Utilisation de la méthode <strong>SCRUM</strong>
+                            </span>
+                    </div>
+                </div>
+
+                <div class="card green accent-5 z-depth-4">
+                    <div class="card-content green-text text-darken-4">
+                        <span class="card-title">Autres <strong>outils</strong>
+                        </span>
+                        <ul style="text-align: center">
+                            <li>Versionnage <strong>Git</strong> / <strong>Github</strong></li>
+                            <li>Base de données <strong>MySQL</strong>.</li>
+                            <li>Linux <strong>Ubuntu</strong></li>
+                        </ul>
+
                     </div>
                 </div>
             </div>
         </div>
+        <h2>Projets</h2>
+        <h3><small>Réalisations & Contributions</small></h3>
     </div>
 {% endblock %}
 
