--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -36,18 +36,16 @@
                 <p>Mes réalisations.<br>Stack technique perso.</p>
             </div>
         </a>
-<!---
-        <a href="{{ path('project') }}">
-            <div class="col offset-s1 s10 offset-m1 m4 offset-l2 l2 home_bloc_tile hoverable">
-                <img src="{{ asset('/img/curriculum-black.png')}}" alt="blog">
-                <h2>Profil</h2>
-                <p>Ma page de présentation générale. Mon parcours, mes attentes et sans doute un peu mes idées.</p>
+
+            <div class="col offset-s1 s10 offset-m2 m4 offset-l2 l2 home_bloc_tile hoverable">
+                <img src="{{ asset('/img/feed_black.png')}}" alt="actualité">
+                <h2>Actualité</h2>
+                <p>Formation : Application de saisie de tag pour le <a href="http://www.mondial-metiers.com/">mondial des métiers.</a></p>
+                <p>Personnel : Développer de mon site.</p>
                 <div class="bl_sp_xs"></div>
-                <img src="{{ asset('/img/construction.png')}}" alt="section en construction" class="construction">
             </div>
-        </a>
--->
-        <div class="col offset-s1 s10 offset-m1 m4 offset-l3 l2 home_bloc_tile hoverable">
+
+        <div class="col offset-s1 s10 offset-m1 m4 offset-l1 l2 home_bloc_tile hoverable">
             <img src="{{ asset('/img/blog-black.png')}}" alt="blog">
             <h2>Blog</h2>
             <p>De la tech et des idées.<br>En construction.</p>
@@ -55,7 +53,7 @@
             <img src="{{ asset('/img/construction.png')}}" alt="section en construction" class="construction">
         </div>
 
-        <div class="col offset-s1 s10 offset-m2 m4 offset-l2 l2 home_bloc_tile hoverable">
+        <div class="col offset-s1 s10 offset-m2 m4 offset-l1 l2 home_bloc_tile hoverable">
             <img src="{{ asset('/img/social-black.png')}}" alt="social">
             <h2>Contact</h2>
             <p><span id="maillink">Me contacter</span><span id="mailelem">{{ mail }} <a href="mailto:alex.fradet.1@gmail.com"><img src="{{ asset('/img/mail-black.png')}}"/></a></span><br>
@@ -70,3 +68,14 @@
     </div>
 {% endblock %}
 {% block footer %}{% endblock %}
+
+{% block javascripts %}
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <!-- Compiled and minified Materialize JavaScript -->
+    <script type="text/javascript" src="{{ asset('js/index.js') }}" ></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <script type="text/javascript" src="{{ asset('js/main.js') }}" ></script>
+    <script type="text/javascript" src="{{ asset('js/index.js') }}" ></script>
+
+{% endblock %}
