Create carousel for project. Refactored a bit js file for mure clarity

--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -41,7 +41,7 @@
                 <img src="{{ asset('/img/feed_black.png')}}" alt="actualité">
                 <h2>Actualité</h2>
                 <p>Formation : Application de saisie de tag pour le <a href="http://www.mondial-metiers.com/">mondial des métiers.</a></p>
-                <p>Personnel : Développer de mon site.</p>
+                <p>Personnel : Développement de mon site.</p>
                 <div class="bl_sp_xs"></div>
             </div>
 
