--- a/app/Resources/views/Main/project.html.twig
+++ b/app/Resources/views/Main/project.html.twig
@@ -10,7 +10,8 @@
         </div>
     <div class=container">
         <h2>Compètences technique</h2>
-        <h3><small>Ce que j'utilise</small></h3>
+        <h3><small>Stack technique perso !</small></h3>
+
         <div class="row project-tile">
             <div class="col offset-s1 s10 offset-m1 m5">
                 <div class="card light-green z-depth-4">
@@ -52,10 +53,17 @@
 
             </div>
             <div class="col offset-s1 s10 m5">
+                <div class="card lime lighten-2 z-depth-2">
+                    <div class="card-content green-text text-darken-4">
+                            <span class="card-title">
+                                    <strong>HTML 5</strong>
+                            </span>
+                    </div>
+                </div>
 
                 <div class="card green lighten-2 z-depth-4">
                     <div class="card-content green-text text-darken-4">
-                        <span class="card-title"><strong>CSS</strong></span>
+                        <span class="card-title"><strong>CSS 3</strong></span>
                         <ul>
                             <li>Je travaille sur <strong>Bootstrap</strong>.</li>
                             <li>Site réalisé en <strong>Materializecss</strong>.</li>
@@ -83,15 +91,31 @@
                         <ul style="text-align: center">
                             <li>Versionnage <strong>Git</strong> / <strong>Github</strong></li>
                             <li>Base de données <strong>MySQL</strong>.</li>
+                            <li>Serveur <strong>Apache2</strong>.</li>
                             <li>Linux <strong>Ubuntu</strong></li>
                         </ul>
 
                     </div>
                 </div>
+
+
             </div>
         </div>
         <h2>Projets</h2>
-        <h3><small>Réalisations & Contributions</small></h3>
+        <h3><small>Réalisations & Contributions !</small></h3>
+
+        <h2>Hackatons</h2>
+        <h3><small>Le codage intensif !</small></h3>
+
+        <div class="carousel">
+            <a class="carousel-item" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
+            <a class="carousel-item" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
+            <a class="carousel-item" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
+            <a class="carousel-item" href="#four!"><img src="http://lorempixel.com/250/250/nature/4"></a>
+            <a class="carousel-item" href="#five!"><img src="http://lorempixel.com/250/250/nature/5"></a>
+        </div>
+
+
     </div>
 {% endblock %}
 
