--- a/app/Resources/views/Main/project.html.twig
+++ b/app/Resources/views/Main/project.html.twig
@@ -108,11 +108,8 @@
         <h3><small>Le codage intensif !</small></h3>
 
         <div class="carousel">
-            <a class="carousel-item" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
-            <a class="carousel-item" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
-            <a class="carousel-item" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
-            <a class="carousel-item" href="#four!"><img src="http://lorempixel.com/250/250/nature/4"></a>
-            <a class="carousel-item" href="#five!"><img src="http://lorempixel.com/250/250/nature/5"></a>
+            <a class="carousel-item" href="#one!"><img src="{{ asset('/img/Hackaton36-1b.png') }}"></a>
+            <a class="carousel-item" href="#two!"><img src="{{ asset('/img/Hackaton36-1b.png') }}"></a>
         </div>
 
 
