--- a/web/css/main.css
+++ b/web/css/main.css
@@ -211,3 +211,12 @@ footer .row {
 #logcom_header h3 {
     line-height: 100%;
 }
+
+.carousel .carousel-item {
+    width:320px;
+}
+
+.carousel-item > img {
+    width: 100%;
+    height: 100%;
+}
