Add card system instead of carousel, probably gonna stay on it

--- a/app/Resources/views/Main/project.html.twig
+++ b/app/Resources/views/Main/project.html.twig
@@ -8,12 +8,12 @@
             <h1>Projets - Stack technique</h1>
 
         </div>
-    <div class=container">
+    <div class="container">
         <h2>Compètences technique</h2>
         <h3><small>Stack technique perso !</small></h3>
 
         <div class="row project-tile">
-            <div class="col offset-s1 s10 offset-m1 m5">
+            <div class="col offset-s1 s10 m6">
                 <div class="card light-green z-depth-4">
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>PHP</strong></span>
@@ -52,7 +52,7 @@
 
 
             </div>
-            <div class="col offset-s1 s10 m5">
+            <div class="col offset-s1 s10 m6">
                 <div class="card lime lighten-2 z-depth-2">
                     <div class="card-content green-text text-darken-4">
                             <span class="card-title">
@@ -107,9 +107,49 @@
         <h2>Hackatons</h2>
         <h3><small>Le codage intensif !</small></h3>
 
-        <div class="carousel">
-            <a class="carousel-item" href="#one!"><img src="{{ asset('/img/Hackaton36-1b.png') }}"></a>
-            <a class="carousel-item" href="#two!"><img src="{{ asset('/img/Hackaton36-1b.png') }}"></a>
+        <div class="row">
+            <div class="col s12 m4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="{{ asset('img/Hackaton36-1b.png') }}">
+                        <span class="card-title">JustAsk</span>
+                    </div>
+                    <div class="card-content">
+                        <p>Application déstinés aux touristes / résidents étranger permettant la mise en relation avec un "local" qui pourra aider dans des démarches et situations complexes en servant d'intermédiaire et traducteur. Basé sur une idée d'un groupe d'étudiant de l'INSEAD.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://github.com/Fradou/Hackaton_INSEAD-WCS">Github</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="{{ asset('img/Hackaton36-1b.png') }}">
+                        <span class="card-title">Lyon à la carte</span>
+                    </div>
+                    <div class="card-content">
+                        <p>Site de création de circuits touristiques développé au cours d'un hackaton d'environ 30h dans le cadre de la formation Wild Code School.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://github.com/WildCodeSchool/lyon_hack_112016_alexandre_riad">Github</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="{{ asset('img/Hackaton36-1b.png') }}">
+                        <span class="card-title">Lyon à la carte</span>
+                    </div>
+                    <div class="card-content">
+                        <p>Site de création de circuits touristiques développé au cours d'un hackaton d'environ 30h dans le cadre de la formation Wild Code School.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://github.com/WildCodeSchool/lyon_hack_112016_alexandre_riad">Github</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
