--- a/web/css/main.css
+++ b/web/css/main.css
@@ -212,11 +212,7 @@ footer .row {
     line-height: 100%;
 }
 
-.carousel .carousel-item {
-    width:320px;
-}
-
-.carousel-item > img {
-    width: 100%;
-    height: 100%;
+.card-image img {
+    width:100%;
+    height:auto;
 }
