Add content for project tile

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta http-equiv="Content-type" content="text/html" charset="utf-8" />
 
@@ -24,8 +24,8 @@
         <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
     {% endblock %}
 
-    <link rel="icon" type="image/png" href="{{ asset('img/loho-perso-white.png')}}" />
-    <link rel="shortcut icon" type="image/x-icon" href="{{ asset('/img/logo-perso-white.ico') }}" />
+    <link rel="icon" type="image/png" href="{{ asset('img/logo_perso-white.png')}}" />
+    <link rel="shortcut icon" type="image/x-icon" href="{{ asset('/img/logo_perso-white.ico') }}" />
 
 </head>
 
@@ -61,7 +61,7 @@
     <ul id="slide-out" class="side-nav">
         <li>
             <div class="userView">
-                <a href=""><img class="circle" src="{{ asset('/img/portrait_alexandrefradet.jpg') }}"></a>
+                <a href=""><img class="circle" src="{{ asset('/img/portrait_alexandrefradet.jpg') }}" alt="portrait"></a>
                 <a href=""><span class="black-text name">Alexandre FRADET</span></a>
                 <a href=""><span class="black-text email">alex.fradet.1@gmail.com</span></a>
             </div>
