--- a/app/Resources/views/Main/project.html.twig
+++ b/app/Resources/views/Main/project.html.twig
@@ -4,8 +4,16 @@
 
 {% block body %}
 
+    <div class="col hide-on-small-only m3 l2">
+        <ul class="section table-of-contents pinned">
+            <li><a href="#competences">Competences</a></li>
+            <li><a href="#projets">Projets</a></li>
+            <li><a href="#hackaton">Intialization</a></li>
+        </ul>
+    </div>
+
         <div class="col s12 offset-m2 m8 offset-l3 l6">
-            <h1>Projets - Stack technique</h1>
+            <h1 class="section scrollspy" id="competences">Projets - Stack technique</h1>
 
         </div>
     <div class="container">
@@ -13,7 +21,7 @@
         <h3><small>Stack technique perso !</small></h3>
 
         <div class="row project-tile">
-            <div class="col offset-s1 s10 m6">
+            <div class="col offset-s1 s10 m5">
                 <div class="card light-green z-depth-4">
                     <div class="card-content green-text text-darken-4">
                         <span class="card-title"><strong>PHP</strong></span>
@@ -104,14 +112,60 @@
         <h2>Projets</h2>
         <h3><small>Réalisations & Contributions !</small></h3>
 
-        <h2>Hackatons</h2>
-        <h3><small>Le codage intensif !</small></h3>
-
-        <div class="row">
-            <div class="col s12 m4">
+        <div class="row section scrollspy" id="projets">
+            <div class="col offset-s1 s10 m4">
                 <div class="card">
                     <div class="card-image">
-                        <img src="{{ asset('img/Hackaton36-1b.png') }}">
+                        <img src="{{ asset('img/Hackaton36-1.png') }}">
+                        <span class="card-title">Tag ton métier</span>
+                    </div>
+                    <div class="card-content">
+                        <p>Application destinée aux visiteurs du Mondial des Métiers leur permettant de renseigner des mots-clés et impression après une rencontre avec un des profesionnels du salon.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://github.com/Fradou/Hackaton_INSEAD-WCS">Github</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col offset-s1 s10 m4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="{{ asset('img/the-booster-2.png') }}">
+                        <span class="card-title">The Booster</span>
+                    </div>
+                    <div class="card-content">
+                        <p>Plateforme de crowfunding de compètences..</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://github.com/WildCodeSchool/lyon_hack_112016_alexandre_riad">Github</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col offset-s1 s10 m4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="{{ asset('img/jekyll-1.png') }}">
+                        <span class="card-title">Restaurant Jekyll</span>
+                    </div>
+                    <div class="card-content">
+                        <p>Projet fictif : Création d'un site vitrine pour un restaurant spécialisé dans la ratatouille.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://github.com/Fradou/Jekylls-Restaurant">Github</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <h2>Hackatons</h2>
+        <h3><small>Les sessions de codage intensif !</small></h3>
+
+        <div class="row section scrollspy" id="hackaton">
+            <div class="col offset-s1 s10 m4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="{{ asset('img/Hackaton36-1.png') }}">
                         <span class="card-title">JustAsk</span>
                     </div>
                     <div class="card-content">
@@ -122,10 +176,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m4">
+            <div class="col offset-s1 s10 m4">
                 <div class="card">
                     <div class="card-image">
-                        <img src="{{ asset('img/Hackaton36-1b.png') }}">
+                        <img src="{{ asset('img/Hackaton36-1.png') }}">
                         <span class="card-title">Lyon à la carte</span>
                     </div>
                     <div class="card-content">
@@ -136,10 +190,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m4">
+            <div class="col offset-s1 s10 m4">
                 <div class="card">
                     <div class="card-image">
-                        <img src="{{ asset('img/Hackaton36-1b.png') }}">
+                        <img src="{{ asset('img/Hackaton36-1.png') }}">
                         <span class="card-title">Lyon à la carte</span>
                     </div>
                     <div class="card-content">
