--- a/web/css/main.css
+++ b/web/css/main.css
@@ -62,11 +62,6 @@ main {
     background-color: #006600;
 }
 
-img {
-    height: 48px;
-    width: 48px;
-}
-
 /* Empty blocs to help layout */
 
 .bl_sp_xs {
@@ -215,4 +210,22 @@ footer .row {
 .card-image img {
     width:100%;
     height:auto;
+}
+
+header, main, footer {
+    padding-left: 175px;
+}
+
+@media only screen and (max-width : 992px) {
+    header, main, footer {
+        padding-left: 0;
+    }
+}
+
+#logo-container {
+    height:120px;
+}
+.brand-logo img {
+    height:100%;
+    width:auto;
 }
