Continue to made some styling on onepage resume. Still thinking about how to handle the colors / graphical aspect of the sidebar. Start to split css from the onepage to the rest (ie:logbook)

--- a/app/Resources/views/Main/logbook.html.twig
+++ b/app/Resources/views/Main/logbook.html.twig
@@ -2,6 +2,9 @@
 
 {% block title %}Journal de Dev - Logbook | {{ site_name }}{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/logbook.css') }}" />
+{% endblock %}
 {% block body %}
 
     <div class="row">
